// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayA component shows message 1`] = `
<span>
  The Words
</span>
`;

exports[`DisplayA component shows message in bold 1`] = `
<span>
  <strong>
    The Words
  </strong>
</span>
`;
